deployment/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      components: frontend
  template:
    metadata:
      labels:
        components: frontend
    spec:
      containers:
        - name: proshop-admin
          image: wiseadme/ecommerce:v1.1
          ports:
            - containerPort: 3000
          command: ["nginx", "-g", "daemon off;"]
          resources:
            limits:
              # Ограничиваем потребляемык ресурсы 128 мегабайт оперативы и не более 100 (10%) (milli processors) процессора
              memory: "128Mi"
              cpu: "100m"
