deployment/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: server
  template:
    metadata:
      labels:
        components: server
    spec:
      containers:
        - name: proshop-server
          image: wiseadme/ecommerce-server:v1.0
          ports:
            - containerPort: 5001
          resources:
            limits:
              # Ограничиваем потребляемык ресурсы 128 мегабайт оперативы и не более 100 (10%) (milli processors) процессора
              memory: "500Mi"
              cpu: "300m"
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
              # подпапка которая будет создана для монго в database-pvc
              subPath: mongo
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: database-pvc
