deployment/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: proshop-admin-clusterip
spec:
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
#      targetPort: 3000
  selector:
    components: frontend
